Closed Bug 360941 Opened 19 years ago Closed 19 years ago

UpdateDriver and UpdateService update location mismatch

Categories

(Toolkit Graveyard :: XULRunner, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wolfiR, Unassigned)

Details

Attachments

(1 file)

hmm, bad summary. Explanation: This only affects trunk and not 1.8 and I already discussed it with Ben Turner via PM. Current trunk updater doesn't work for xulrunner applications which ship its own xulrunner because the nsUpdateService components downloads updates to XCurProcD which is the application directory on trunk (likely changed by bug 319843) but nsUpdateDriver is searching updates in appDir/xulrunner/updates/ because the GREDir is appDir/xulrunner. Trying to fix this would need some design questions answered. I think that appDir/updates is the right location and therefore nsUpdateDriver could be changed to scan this directory if it runs a xulapp. (That's what I use at the moment as workaround/bugfix) In addition to that the update driver should copy in a copy of updater.ini which resides in the appDir and not the GREDir (appDir/xulrunner)
Attached patch patch #1Splinter Review
This one more or less restores the functionality in 1.8.1 while updates are now downloaded to appDir/updates and run from there.
Comment on attachment 246368 [details] [diff] [review] patch #1 This patch should at least bring back the functionality like in 1.8.1
Attachment #246368 - Flags: first-review?(benjamin)
Attachment #246368 - Flags: first-review?(benjamin) → first-review+
/cvsroot/mozilla/toolkit/xre/nsUpdateDriver.cpp,v <-- nsUpdateDriver.cpp new revision: 1.21; previous revision: 1.20 The mismatch is fixed and an updater.ini move could be discussed in another bug.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
This needs a unit test as well. Sorry for not catching that earlier.
Flags: in-testsuite?
Product: Toolkit → Toolkit Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: