Bug 360941 - UpdateDriver and UpdateService update location mismatch, r=bsmedberg